example/s/infer-out/report.txt
#0
CWE121_Stack_Based_Buffer_Overflow__char_type_overrun_memcpy_01.c:38: error: Null Dereference
  pointer `s` last assigned on line 37 could be null and is dereferenced at line 38, column 5.
  36.     {
  37.           int *s = NULL;
  38.     *s = 42;
          ^
  39.         charVoid structCharVoid;
  40.         structCharVoid.voidSecond = (void *)SRC_STR;

Found 1 issue
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 1
